...
                                <view key="tableHeaderView" contentMode="scaleToFill" id="SlT-14-YTK">
                                    <rect key="frame" x="0.0" y="0.0" width="414" height="72"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <subviews>
                                        <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Plus" translatesAutoresizingMaskIntoConstraints="NO" id="8kc-Vc-nYB">
                                            <rect key="frame" x="16" y="16" width="40" height="40"/>
                                            <accessibility key="accessibilityConfiguration" identifier="addImageTable"/>
                                            <gestureRecognizers/>
                                            <constraints>
                                                <constraint firstAttribute="width" constant="40" id="FvB-Mi-2vO"/>
                                                <constraint firstAttribute="height" constant="40" id="tJu-cb-r0T"/>
                                            </constraints>
                                            <connections>
                                                <outletCollection property="gestureRecognizers" destination="1hg-pB-41f" appends="YES" id="vgp-sJ-MBd"/>
                                            </connections>
                                        </imageView>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FXf-vx-HIP">
                                            <rect key="frame" x="73" y="0.0" width="341" height="72"/>
                                            <accessibility key="accessibilityConfiguration" identifier="addButtonTable"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="72" id="924-7R-r7e"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="16"/>
                                            <state key="normal" title="Add currency pair"/>
                                            <connections>
...
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="63l-Iz-6ct">
                                        <rect key="frame" x="0.0" y="354.5" width="414" height="187.5"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bPo-xg-CcD">
                                                <rect key="frame" x="32" y="103" width="350" height="47"/>
                                                <accessibility key="accessibilityConfiguration" identifier="addButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="47" id="Taf-w0-FSN"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="19"/>
                                                <state key="normal" title="Add currency pair">
                                                    <color key="titleColor" red="0.0" green="0.45882352941176469" blue="0.92156862745098034" alpha="1" colorSpace="calibratedRGB"/>
...
                                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                                                <color key="textColor" red="0.5450980392" green="0.58431372550000005" blue="0.61960784310000006" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Plus" translatesAutoresizingMaskIntoConstraints="NO" id="4ki-4N-dV8">
                                                <rect key="frame" x="162" y="0.0" width="90" height="90"/>
                                                <accessibility key="accessibilityConfiguration" identifier="addImage"/>
                                                <gestureRecognizers/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="90" id="4ub-GY-dL5"/>
                                                    <constraint firstAttribute="height" constant="90" id="cBg-DD-P2I"/>
                                                </constraints>
                                                <connections>
...
